# omegalabs-anytoany-bittensor

./: .dockerignore  .gitignore  Dockerfile  MINER_TESTING.md  Makefile  README.md  auto_updating_scoring_api.sh  auto_updating_validator.sh  cleanup_cache.py  constants_voicebench.py  debug_dataset.py  debug_responses.py  get_uid.py  leaderboard.json  leaderboard.py  leaderboard_tasks.py  min_compute.yml  pull_hf.py  req_aud.txt  requirements-api.txt  requirements-leaderboard.txt  requirements.txt  requirements_new.txt  setup.py  test_api_scoring.py  test_commands.md  test_miner_api.py  test_mm_gen.py  test_scoring_api.py  test_simple_validator.py  test_specific_model.py  test_validator_hf_model.py  test_voicebench_scoring.py  upload_ckpt_hf.py  v2v_scoring.py  vali.env  vali.env.template
api/: app.py
config/: 8B_lora.yaml  eleuther_eval_baseline.yaml  gen.yaml
constants/: __init__.py
docs/: README_VALIDATOR_LOGIC.md  scoring_flow.md  validator_setup.md  voicebench_implementation_plan.md
ds/: __init__.py  bagel_llama3.py  embed_caption_dataset.py  even_batcher.py  export_coco_llava_instruct.py  export_sam_llava.py  export_sam_llava2.py  llava_instruct.py  (+3 more)
sandboxing/S2S/: pyproject.toml
sandboxing/S2S/docker/: Dockerfile  min_compute.yml  startup.sh
sandboxing/S2S/neurons/validator/: server.py
sandboxing/S2S/neurons/validator/api/: __init__.py  endpoints.py  models.py  server.py
sandboxing/S2S/neurons/validator/metrics/: s2s.py
sandboxing/S2S/neurons/validator/sandbox/: process.py  security.py
sandboxing/S2S/neurons/validator/utils/: data_processor.py
(+128 files in other folders)
